--- a/config.json
+++ b/config.json
@@ -6,6 +6,7 @@
     "filename": "biba/0.jpg",
     "backgrounds": "images/backgrounds",
     "processed_path": "images/processed",
+    "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
     "need_hand": false
 }
