--- a/config.json
+++ b/config.json
@@ -8,5 +8,12 @@
     "processed_path": "images/processed",
     "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
-    "need_hand": false
+    "need_hand": false,
+    "graphics": {
+        "window_size": {
+            "height": 640,
+            "width": 480
+        },
+        "unit_height": 50
+    }
 }
