photo number choosing impl.

--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
     "need_hand": false,
+    "photo_num": 15,
     "graphics": {
         "window_size": {
             "height": 640,
