--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "images_path": "images",
-    "name_list": ["biba", "boba", "bebra"],
+    "name_list": ["Втулка", "Шестерёнка", "Стержень"],
 
     "filepath": "images/",
     "filename": "biba/0.jpg",
@@ -8,9 +8,9 @@
     "processed_path": "images/processed",
     "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
-    "need_hand": false,
+    "need_hand": true,
     "photo_num": 15,
-    "camera_num": 0,
+    "camera_num": 1,
     "graphics": {
         "window_size": {
             "height": 640,
