threaded step 2, some bugfixes in camera and step 2

--- a/config.json
+++ b/config.json
@@ -1,6 +1,10 @@
 {
     "images_path": "images",
-    "name_list": ["Втулка", "Шестерёнка", "Стержень"],
+    "name_list": ["batman", "bolshoy_grover", "bolshoy_podshipnik", "dvernoye_koltso", "grib", "koltso",
+                  "krylo", "malenkiy_podshipnik", "nlo", "pruzhina", "roochka", "shesterenka", "sterzhen",
+                  "tolstaya_gayka", "tolstaya_shaiba", "tolstoye_koltso", "tonkaya_gayka", "tonkaya_shaiba",
+                  "vint", "vtulka"
+                 ],
 
     "filepath": "images/",
     "filename": "biba/0.jpg",
@@ -21,7 +25,7 @@
         "unit_height": 50
     },
     "snapshots": {
-        "snapshot_delay": 1,
-        "snapshots_number": 3
+        "snapshot_delay": 0,
+        "snapshots_number": 200
     }
 }
