--- a/config.json
+++ b/config.json
@@ -14,6 +14,11 @@
     "empty_table_photo_name_": "empty_table.jpg",
     "need_hand": true,
     "camera_num": 0,
+    "roi": { "height": 200,
+             "width": 200
+            },
+    "filtration": { "blurry_threshold": 100
+    },
     "generation_backs": { "photo_num": 20,
                           "height": 2160,
                           "width": 4096,
