--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
     "images_path": "images",
     "name_list": ["batman", "bolshoy_grover", "bolshoy_podshipnik", "dvernoye_koltso", "grib", "koltso",
-                  "krylo", "malenkiy_podshipnik", "nlo", "pruzhina", "roochka", "shesterenka", "sterzhen",
-                  "tolstaya_gayka", "tolstaya_shaiba", "tolstoye_koltso", "tonkaya_gayka", "tonkaya_shaiba",
-                  "vint", "vtulka"
+    "krylo", "malenkiy_podshipnik", "nlo", "pruzhina", "roochka", "shesterenka", "sterzhen",
+    "tolstaya_gayka", "tolstaya_shaiba", "tolstoye_koltso", "tonkaya_gayka", "tonkaya_shaiba",
+    "vint", "vtulka"
                  ],
 
     "filepath": "images/",
@@ -12,10 +12,14 @@
     "processed_path": "images/processed",
     "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
+    "empty_table": "empty_table",
+    "empty_tables_directory": "images/Blank_surfaces",
     "need_hand": true,
     "camera_num": 0,
-    "roi": { "height": 200,
-             "width": 200
+    "mediapipe": { "max_num_hands": 5,
+                   "min_detection_confidence": 0.3},
+    "roi": { "height": 300,
+             "width": 300
             },
     "filtration": { "blurry_threshold": 100
     },
