utilite with yolov5

--- a/config.json
+++ b/config.json
@@ -1,4 +1,6 @@
 {
+    "yolo_classificator_weigths_path": "best_one_class.pt",
+    "yolo_repo_path": "yolov5",
     "images_path": "images",
     "name_list": ["batman", "bolshoy_grover", "bolshoy_podshipnik", "dvernoye_koltso", "grib", "koltso",
     "krylo", "malenkiy_podshipnik", "nlo", "pruzhina", "roochka", "shesterenka", "sterzhen",
@@ -9,7 +11,7 @@
     "filepath": "images/",
     "filename": "biba/0.jpg",
     "backgrounds": "images/backgrounds",
-    "processed_path": "images/processed",
+    "1_step": {"raw_photos_path": "images/"},
     "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
     "empty_table": "empty_table",
@@ -23,9 +25,15 @@
             },
     "filtration": { "blurry_threshold": 100
     },
+    "preprocessing": { "processed_folder": "imagesprocessed/",
+                       "roi_indicator": 1,
+                       "mask_indicator": 1,
+                       "hand_indicator": 1,
+                       "static_indicator": 0},
     "generation_backs": { "photo_num": 20,
                           "iou": 0.2,
                           "max_details_on_photo": 5,
+                          "max_hands_on_photo": 2,
                           "height": 2160,
                           "width": 4096,
                           "final_height": 1080,
