app without static rect and mask generation

--- a/config.json
+++ b/config.json
@@ -10,9 +10,7 @@
 
     "filepath": "images/",
     "filename": "biba/0.jpg",
-    "backgrounds": "images/backgrounds",
     "1_step": {"raw_photos_path": "images/"},
-    "generated_images": "images/generated_images",
     "empty_table_photo_name_": "empty_table.jpg",
     "empty_table": "empty_table",
     "empty_tables_directory": "images/Blank_surfaces",
@@ -30,14 +28,22 @@
                        "mask_indicator": 1,
                        "hand_indicator": 1,
                        "static_indicator": 0},
-    "generation_backs": { "photo_num": 20,
+    "generation_backs": { "generation_folder": "imagesgeneration/",
+                          "backgrounds": "images/backgrounds",
+                          "photo_num": 10,
                           "iou": 0.2,
                           "max_details_on_photo": 5,
                           "max_hands_on_photo": 2,
                           "height": 2160,
                           "width": 4096,
                           "final_height": 1080,
-                          "final_width": 1920
+                          "final_width": 1920,
+                          "number_hands": 1,
+                          "rectangle_indicator": 1,
+                          "number_of_masks": 0,
+                          "number_of_hand_masks": 0,
+                          "all_mask_folders": [],
+                          "all_hand_folders": []
                 },
     "max_number_of_details": 15,
     "graphics": {
