--- a/config.json
+++ b/config.json
@@ -32,17 +32,16 @@
                           "photo_num": 10,
                           "iou": 0.2,
                           "max_details_on_photo": 5,
-                          "max_hands_on_photo": 2,
                           "height": 2160,
                           "width": 4096,
                           "final_height": 480,
                           "final_width": 640,
-                          "number_hands": 1,
                           "rectangle_indicator": 1,
                           "number_of_masks": 0,
                           "number_of_hand_masks": 0,
                           "all_mask_folders": [],
-                          "all_hand_folders": []
+                          "min_scaling": 1,
+                          "max_scaling": 5
                 },
     "max_number_of_details": 6,
     "graphics": {
