back to worked version (revert 1 commit on python branch)

--- a/config.json
+++ b/config.json
@@ -16,7 +16,7 @@
     "roi": { "height": 50,
              "width": 50
             },
-    "preprocessing": { "processed_folder": "myasorubkaprocessed/",
+    "preprocessing": { "processed_folder": "imagesprocessed/",
                        "roi_indicator": 1,
                        "mask_indicator": 1,
                        "hand_indicator": 1,
@@ -26,17 +26,16 @@
                        "make_validation_dataset": 0,
                        "val_width": 640,
                        "val_height": 480},
-    "generation_backs": { "generation_folder": "generation/SG2/val/",
-                          "processed_folders": ["SG2/realsence_val/", "SG2/low_light_val/", "SG2/very_low_light_val"],
-                          "yolo_folder": "yolo_point/SG2/val/",
-                          "backgrounds": "backgrounds_gradients",
-                          "photo_num": 1000,
-                          "iou": 0,
-                          "max_details_on_photo": 10,
+    "generation_backs": { "generation_folder": "imagesgeneration/",
+                          "yolo_folder": "yolo_points",
+                          "backgrounds": "backgrounds",
+                          "photo_num": 10,
+                          "iou": 0.2,
+                          "max_details_on_photo": 5,
                           "height": 2160,
                           "width": 4096,
-                          "final_height": 1080,
-                          "final_width": 1920,
+                          "final_height": 480,
+                          "final_width": 640,
                           "rectangle_indicator": 1,
                           "number_of_masks": 0,
                           "number_of_hand_masks": 0,
